feat: implement token auth for endpoints
- add Bearer authentication at main.go
- add swaggo security notation in each controller method
- update docs/
