# docs/swagger.json
@@ -65,6 +65,11 @@
         },
         "/api/v1/boards": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new board.",
                 "consumes": [
                     "application/json"
@@ -111,6 +116,11 @@
         },
         "/api/v1/boards/{board_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a board by its ID.",
                 "produces": [
                     "application/json"
@@ -150,6 +160,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing board.",
                 "consumes": [
                     "application/json"
@@ -201,6 +216,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a board by its ID.",
                 "produces": [
                     "application/json"
@@ -242,6 +262,11 @@
         },
         "/api/v1/cards": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new card.",
                 "consumes": [
                     "application/json"
@@ -288,6 +313,11 @@
         },
         "/api/v1/cards/{card_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a card by its ID.",
                 "produces": [
                     "application/json"
@@ -327,6 +357,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing card.",
                 "consumes": [
                     "application/json"
@@ -378,6 +413,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a card by its ID.",
                 "produces": [
                     "application/json"
@@ -419,6 +459,11 @@
         },
         "/api/v1/messages": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new message.",
                 "consumes": [
                     "application/json"
@@ -465,6 +510,11 @@
         },
         "/api/v1/messages/{message_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a message by its ID.",
                 "produces": [
                     "application/json"
@@ -504,6 +554,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing message.",
                 "consumes": [
                     "application/json"
@@ -555,6 +610,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a message by its ID.",
                 "produces": [
                     "application/json"
@@ -596,6 +656,11 @@
         },
         "/api/v1/priorities": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new priority.",
                 "consumes": [
                     "application/json"
@@ -642,6 +707,11 @@
         },
         "/api/v1/priorities/{priority_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a priority by its ID.",
                 "produces": [
                     "application/json"
@@ -681,6 +751,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing priority.",
                 "consumes": [
                     "application/json"
@@ -732,6 +807,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a priority by its ID.",
                 "produces": [
                     "application/json"
@@ -773,6 +853,11 @@
         },
         "/api/v1/projects": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new project.",
                 "consumes": [
                     "application/json"
@@ -819,6 +904,11 @@
         },
         "/api/v1/projects/{project_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a project by its ID.",
                 "produces": [
                     "application/json"
@@ -858,6 +948,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing project.",
                 "consumes": [
                     "application/json"
@@ -909,6 +1004,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a project by its ID.",
                 "produces": [
                     "application/json"
@@ -950,6 +1050,11 @@
         },
         "/api/v1/statuses": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Creates a new status.",
                 "consumes": [
                     "application/json"
@@ -996,6 +1101,11 @@
         },
         "/api/v1/statuses/{status_id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a status by its ID.",
                 "produces": [
                     "application/json"
@@ -1035,6 +1145,11 @@
                 }
             },
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing status.",
                 "consumes": [
                     "application/json"
@@ -1086,6 +1201,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a status by its ID.",
                 "produces": [
                     "application/json"
@@ -1127,6 +1247,11 @@
         },
         "/api/v1/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieves a user by their email.",
                 "produces": [
                     "application/json"
@@ -1160,6 +1285,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Registers a new user.",
                 "consumes": [
                     "application/json"
@@ -1206,6 +1336,11 @@
         },
         "/api/v1/users/{user_id}": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Updates an existing user.",
                 "consumes": [
                     "application/json"
@@ -1257,6 +1392,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Deletes a user by their ID.",
                 "produces": [
                     "application/json"
@@ -1416,6 +1556,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
